# ZeroCode

./: .gitignore  ZEROCODE.md  pyproject.toml  学习导读.md  运行.md
tests/: test_agent.py  test_codegraph.py  test_commands.py  test_context.py  test_context_window.py  test_hooks.py  test_mcp.py  test_memory.py  test_permissions.py  test_recovery.py  test_replacement_state.py  test_serialization.py  test_skills.py  test_subagent.py  test_teams.py  test_tool_search.py  test_worktree.py  verify_subagent.py
zerocode/: __main__.py  agent.py  app.py  askuser_dialog.py  cache.py  client.py  config.py  conversation.py  driver.py  permission_dialog.py  plan_dialog.py  prompts.py  serialization.py  session_dialog.py  teammate_tree.py  validator.py
zerocode/agents/: __init__.py  fork.py  loader.py  notification.py  parser.py  task_manager.py  tool_filter.py  trace.py
zerocode/codegraph/: __init__.py  formatter.py  indexer.py  models.py  parser.py  resolver.py  store.py
zerocode/commands/: __init__.py  completion.py  parser.py  registry.py
zerocode/context/: __init__.py  manager.py
zerocode/filehistory/: __init__.py  history.py
zerocode/hooks/: __init__.py  conditions.py  engine.py  events.py  executors.py  loader.py  models.py
zerocode/mcp_client/: __init__.py  client.py  manager.py  tool_wrapper.py
zerocode/memory/: __init__.py  auto_memory.py  instructions.py  recall.py  session.py
zerocode/permissions/: __init__.py  checker.py  dangerous.py  modes.py  rules.py  sandbox.py
zerocode/skills/: __init__.py  directory.py  executor.py  loader.py  parser.py
(+73 files in other folders)
