[project]
name = "zerocode"
version = "0.2.0"
description = "A terminal AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "textual>=2.1.0",
    "anthropic>=0.42.0",
    "openai>=1.60.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "mcp>=1.12.0",
    "httpx>=0.27.0",
    "networkx>=3.0",
    "tree-sitter>=0.25,<0.26",
    "tree-sitter-python>=0.25,<0.26",
]

[project.scripts]
zerocode = "zerocode.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["zerocode"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
